src/components/Attachment/styling/LinkPreview.scss
@use '../../../styling/utils';

.str-chat__message-attachment-card {
  /* The height of scraped images, the default value is optimized for 1.91:1 aspect ratio */
  --str-chat__scraped-image-height: calc(
    var(--str-chat__attachment-max-width) * calc(1 / 1.91)
  );

  width: 100%;
  display: flex;
  gap: var(--str-chat__spacing-xs);
  padding: var(--str-chat__spacing-xs) var(--str-chat__spacing-sm)
    var(--str-chat__spacing-xs) var(--str-chat__spacing-xs);
  overflow: hidden;
  border-radius: var(--str-chat__message-bubble-radius-attachment);
  line-height: var(--str-chat__typography-line-height-tight);

  * {
    color: var(--chat-text);
  }

  .str-chat__message-attachment-card--header {
    position: relative;
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    overflow: hidden;

    img,
    .str-chat__image-placeholder {
      border-radius: var(--str-chat__message-bubble-radius-attachment-inline, 8px);
    }

    img {
      object-fit: cover;
      width: 40px;
      height: 40px;
    }
  }

  &.str-chat__message-attachment-card--video .str-chat__message-attachment-card--header {
    height: calc(var(--str-chat__attachment-max-width) * calc(9 / 16));
  }

  .str-chat__message-attachment-card--content {
    display: flex;
    flex-direction: column;
    gap: var(--str-chat__spacing-xxs);
    min-width: 0;
  }

  .str-chat__message-attachment-card--title {
    font: var(--str-chat__font-caption-emphasis);
  }

  .str-chat__message-attachment-card--source-link,
  .str-chat__message-attachment-card--text {
    font: var(--str-chat__font-metadata-default);
  }

  .str-chat__message-attachment-card--title,
  .str-chat__message-attachment-card--url {
    @include utils.ellipsis-text();
  }

  .str-chat__message-attachment-card--text {
    @include utils.ellipsis-text-clamp-lines();
    font: var(--str-chat__font-metadata-default);
  }

  .str-chat__message-attachment-card--source-link {
    display: flex;
    align-items: center;
    min-width: 0;
    max-width: 100%;
    gap: var(--str-chat__spacing-xxs);

    .str-chat__message-attachment-card--url {
      flex: 1;
      min-width: 0;
    }
  }
}

.str-chat__message--has-single-attachment {
  .str-chat__message-attachment-card {
    display: block;
    padding: 0;

    img {
      height: var(--str-chat__scraped-image-height);
      width: 100%;
      border-radius: 0;
    }

    .str-chat__message-attachment-card--header:has(.str-chat__image-placeholder) {
      height: var(--str-chat__scraped-image-height);

      .str-chat__image-placeholder {
        border-radius: 0;
      }
    }

    .str-chat__message-attachment-card--content {
      padding: var(--str-chat__spacing-sm);

      .str-chat__message-attachment-card--text {
        @include utils.ellipsis-text-clamp-lines(2);
      }
    }
  }
}

